Fixed bug #31363 (broken non-blocking flock()).

# Patch by ian at snork dot net